# PA-EVIO

./: README.md  dependencies.yaml
event-ts/ts_ros/: CMakeLists.txt  package.xml
event-ts/ts_ros/cfg/: parameters.yaml
event-ts/ts_ros/include/: AdaptiveTSurface.h  TicToc.h  TimeSurface.h
event-ts/ts_ros/launch/: mono_adaptive_time_surface.launch  mono_time_surface.launch  stereo_adaptive_time_surface.launch  stereo_time_surface.launch
event-ts/ts_ros/rviz/: default.rviz
event-ts/ts_ros/src/: ATimeSurface_node.cpp  AdaptiveTSurface.cpp  TimeSurface.cpp  TimeSurface_node.cpp
msckf-evio/config/davis240c/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  kalibr_imuevent_chain.yaml
msckf-evio/config/eds/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  kalibr_imuevent_chain.yaml
msckf-evio/config/hku/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  kalibr_imuevent_chain.yaml
msckf-evio/config/uzhfpv_indoor/: estimator_config.yaml  kalibr_imucam_chain.yaml  kalibr_imuevent_chain.yaml
msckf-evio/config/uzhfpv_indoor_45/: estimator_config.yaml  kalibr_imucam_chain.yaml  kalibr_imuevent_chain.yaml
msckf-evio/config/uzhfpv_outdoor/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  kalibr_imuevent_chain.yaml
msckf-evio/config/vicon/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml  kalibr_imuevent_chain.yaml
msckf-evio/ov_core/: package.xml
msckf-evio/ov_core/cmake/: ROS1.cmake
msckf-evio/ov_core/src/: test_event_tracking.cpp
msckf-evio/ov_core/src/track/: TrackBase.cpp  TrackBase.h  TrackKLT.cpp  TrackKLT.h
msckf-evio/ov_init/src/init/: InertialInitializer.cpp  InertialInitializerOptions.h
msckf-evio/ov_msckf/: package.xml
msckf-evio/ov_msckf/cmake/: ROS1.cmake
msckf-evio/ov_msckf/launch/: serial_hku.launch  subscribe_davis240c.launch  subscribe_eds.launch  subscribe_fpv_indoor.launch  subscribe_fpv_indoor_45.launch  subscribe_fpv_outdoor.launch  subscribe_hku.launch  subscribe_vicon.launch
msckf-evio/ov_msckf/scripts/: 1run_script_davis240c.sh
msckf-evio/ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerHelper.cpp  VioManagerOptions.h
msckf-evio/ov_msckf/src/state/: State.cpp  (+2 more)
(+2 files in other folders)
